--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.3",
     "path": "^0.12.7",
@@ -10,14 +13,10 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
-    "react-scripts": "5.0.0",
-    "serve": "^13.0.2",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
   },
-  
   "scripts": {
     "start": "serve -s build",
     "build": "react-scripts build",
