--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://github.com/Korex97/portfolio",
+  "homepage": "https://Korex97.github.io/portfolio",
   "version": "1.1.0",
   "private": true,
   "dependencies": {
@@ -15,16 +15,18 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "serve -s build",
+    "local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
